--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redibox-hook-memset",
-  "description": "In memory data sets synced via redis",
-  "version": "1.0.5",
+  "description": "Synchronised data sets stored in memory across all servers - for quick synchronous access to data that is commonly used but not likely to update frequently.",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "author": "Mike Diarmid",
   "repository": {
@@ -19,19 +19,12 @@
     "redis",
     "redis-cluster",
     "cluster",
-    "scheduler",
-    "scheduling",
     "waterline",
     "sails",
     "cache",
-    "throttle",
-    "throttling",
-    "timeseries",
-    "autocomplete",
-    "indexes",
-    "indices",
-    "lock",
-    "redlock",
+    "memory",
+    "set",
+    "immutable",
     "lua",
     "ioredis"
   ],
